parte do gabriel

--- a/html/index.html
+++ b/html/index.html
@@ -60,36 +60,111 @@
 
       <!-- Sobre nós / Second page-->
 
-      <section class="about us">
-        <div>
-          <h2>Whats Netbooks</h2>
-          <h1>Why Join to Netbook Social Networ</h1>
-          <p>
-            Recent surveys have indicated that small businesses recognise the
-            need they have to connect with consumer.
+      <section class="about-us">
+        <article class="about-us-article">
+          <h5 class="inter-h5-title">Whats Netbooks?</h5>
+          <h2 class="inter-h2-title">
+            Why Join to Netbook <br />
+            Social network?
+          </h2>
+          <p class="inter-p">
+            Recent surveys have indicated that small businesses <br />
+            recognise the need they have to connect with <br />
+            consumer.
           </p>
-
-          <ul>
-            <li>Groups</li>
-            <li>Messages</li>
-            <li>Share</li>
+          <ul class="about-us-list">
+            <li>
+              <div class="outside-circle"></div>
+              <div class="inside-circle"></div>
+              Groups
+            </li>
+            <li>
+              <div class="outside-circle"></div>
+              <div class="inside-circle"></div>
+              Messages
+            </li>
+            <li>
+              <div class="outside-circle"></div>
+              <div class="inside-circle"></div>
+              Share
+            </li>
           </ul>
-
-          <div>
+        </article>
+        <div class="about-us-big-images">
+          <img src="img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
+        </div>
+        <div class="small-image1">
+          <img src="img/Image (2).png" alt="Homem usando notebook" />
+          <div class="small-image2">
             <img
-              src="../img/pg2/img-pg2-a.svg"
-              alt="Imagem A - Sobre nós/Segunda página"
-            />
-            <img
-              src="../img/pg2/img-pg2-b.svg"
-              alt="Imagem B - Sobre nós/Segunda página"
-            />
-            <img
-              src="../img/pg2/img-pg2-c.svg"
-              alt="Imagem C - Sobre nós/Segunda página"
+              src="img/Image (3).png"
+              alt="Cabos de rede conectados a um hardware"
             />
           </div>
         </div>
+      </section>
+      <section id="avaliations">
+        <article class="card-1">
+          <div class="rating-members">
+            <img
+              class="blue-star"
+              src="img/Star.png"
+              alt="Ícone de estrela azul"
+            />
+            <p class="inter-500-20px">4.8 Rating</p>
+          </div>
+          <div class="rating-members">
+            <img src="img/people.png" alt="fotos de três pessoas" />
+            <p class="inter-500-16px">
+              <span class="inter-600-16px">+838k</span> Members
+            </p>
+          </div>
+          <p class="inter-400-16px">
+            More than 2 billion we people over <br />
+            countries use socibooks we to stay <br />
+            in touch with friends.
+          </p>
+          <a class="inter-500-16px-2" href="">Join Our Community</a>
+        </article>
+        <article class="card-2">
+          <div class="rating-members">
+            <img
+              class="blue-star"
+              src="img/Trophy.png"
+              alt="Ícone de troféu azul"
+            />
+            <p class="inter-500-20px">Awwwards</p>
+          </div>
+          <div class="rating-members">
+            <img src="img/Ellipse 14.png" alt="ícone do site Github" />
+            <p class="inter-500-16px">
+              Best of <span class="inter-600-16px">2021</span> on Github
+            </p>
+          </div>
+          <p class="inter-400-16px">
+            More than 2 billion we people over <br />
+            countries use socibooks we to stay <br />
+            in touch with friends.
+          </p>
+          <a class="inter-500-16px-2" href="">Go to Awards</a>
+        </article>
+        <article class="our-achievment">
+          <h5 class="inter-h5-title">Our Achievment</h5>
+          <h2 class="inter-h2-title">
+            We are Connecting <br />
+            You The Digital Life.
+          </h2>
+          <p class="inter-400-16px-2">
+            The scope the Social Media becomes crucial Is <br />
+            helps the business to directly engage with their <br />
+            needs and wants.
+          </p>
+          <a href="">
+            <div class="discover-me-button">
+              <p class="inter-500-14px" href="">Discover-me</p>
+            </div>
+          </a>
+        </article>
       </section>
 
       <!-- Avaliações / Third page-->
