--- a/html/index.html
+++ b/html/index.html
@@ -91,13 +91,13 @@
           </ul>
         </article>
         <div class="about-us-big-images">
-          <img src="img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
+          <img src="../img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
         </div>
         <div class="small-image1">
-          <img src="img/Image (2).png" alt="Homem usando notebook" />
+          <img src="../img/Image (2).png" alt="Homem usando notebook" />
           <div class="small-image2">
             <img
-              src="img/Image (3).png"
+              src="../img/Image (3).png"
               alt="Cabos de rede conectados a um hardware"
             />
           </div>
@@ -108,13 +108,13 @@
           <div class="rating-members">
             <img
               class="blue-star"
-              src="img/Star.png"
+              src="../img/Star.png"
               alt="Ícone de estrela azul"
             />
             <p class="inter-500-20px">4.8 Rating</p>
           </div>
           <div class="rating-members">
-            <img src="img/people.png" alt="fotos de três pessoas" />
+            <img src="../img/people.png" alt="fotos de três pessoas" />
             <p class="inter-500-16px">
               <span class="inter-600-16px">+838k</span> Members
             </p>
@@ -130,13 +130,13 @@
           <div class="rating-members">
             <img
               class="blue-star"
-              src="img/Trophy.png"
+              src="../img/Trophy.png"
               alt="Ícone de troféu azul"
             />
             <p class="inter-500-20px">Awwwards</p>
           </div>
           <div class="rating-members">
-            <img src="img/Ellipse 14.png" alt="ícone do site Github" />
+            <img src="../img/Ellipse 14.png" alt="ícone do site Github" />
             <p class="inter-500-16px">
               Best of <span class="inter-600-16px">2021</span> on Github
             </p>
