ajustando code review

--- a/html/index.html
+++ b/html/index.html
@@ -21,16 +21,16 @@
       <section class="home">
         <header class="header">
           <div class="initial-header">
-          <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
-          <nav class="nav">
-            <ul>
-              <li><span> Home</span></li>
-              <li>Community</li>
-              <li>Blog</li>
-              <li>Events</li>
-            </ul>
-          </nav>
-        </div>
+            <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
+            <nav class="nav">
+              <ul>
+                <li><span> Home</span></li>
+                <li>Community</li>
+                <li>Blog</li>
+                <li>Events</li>
+              </ul>
+            </nav>
+          </div>
           <button>Log in</button>
         </header>
 
@@ -40,8 +40,8 @@
 
             <h1><strong>Your Solutions For Community</strong></h1>
             <p>
-              More than 2 billion people in over countries use socibook<br> to stay
-              in touch with frieends & family
+              More than 2 billion people in over countries use socibook<br />
+              to stay in touch with frieends & family
             </p>
 
             <button class="b2">About More</button>
@@ -56,7 +56,6 @@
           </div>
         </div>
       </section>
-
 
       <!-- Sobre nós / Second page-->
 
@@ -215,55 +214,70 @@
         <div class="cabeca">
           <h2>Our Community</h2>
           <h1>Community Main Feature</h1>
-          <p>The wise man therefore always holds in these matters to this principle of selection.</p>
-      </div>
-  
-      <div class="container">
-  
+          <p>
+            The wise man therefore always holds in these matters to this
+            principle of selection.
+          </p>
+        </div>
+
+        <div class="container">
           <div1>
-              <img src="/img/Icon.png">
+            <img src="/img/Icon.png" />
           </div1>
           <div>
-              <h3>Members, Friends</h3>
-              <p>Members, Friends Connection ( like followers ), Private Message</p>
+            <h3>Members, Friends</h3>
+            <p>
+              Members, Friends Connection ( like followers ), Private Message
+            </p>
           </div>
           <div1>
-              <img src="/img/Icon(3).png">
+            <img src="/img/Icon(3).png" />
           </div1>
           <div>
-              <h3>Groups</h3>
-              <p>Your users can create groups to let other users to join and talk</p>
+            <h3>Groups</h3>
+            <p>
+              Your users can create groups to let other users to join and talk
+            </p>
           </div>
           <div1>
-              <img src="/img/Icon(1).png">
+            <img src="/img/Icon(1).png" />
           </div1>
           <div>
-              <h3>Forum</h3>
-              <p>Forum is ready by BBPress. Your users can make topics and talk.</p>
+            <h3>Forum</h3>
+            <p>
+              Forum is ready by BBPress. Your users can make topics and talk.
+            </p>
           </div>
           <div1>
-              <img src="/img/Icon(4).png">
+            <img src="/img/Icon(4).png" />
           </div1>
           <div>
-              <h3>Custom Module</h3>
-              <p>You can create Members, Groups Module. We already created 3 modules. It's by drag & drop live builder.</p>
+            <h3>Custom Module</h3>
+            <p>
+              You can create Members, Groups Module. We already created 3
+              modules. It's by drag & drop live builder.
+            </p>
           </div>
           <div1>
-              <img src="/img/Icon(2).png">
+            <img src="/img/Icon(2).png" />
           </div1>
           <div>
-              <h3>List Builder</h3>
-              <p>Members, Groups list can be modified by drag & drop live builder.</p>
+            <h3>List Builder</h3>
+            <p>
+              Members, Groups list can be modified by drag & drop live builder.
+            </p>
           </div>
           <div1>
-              <img src="/img/Icon(5).png">
+            <img src="/img/Icon(5).png" />
           </div1>
           <div>
-              <h3>List Scroll Effects</h3>
-              <p>8 different scroll effects are ready.
-                  You can always change by your tastes.</p>
+            <h3>List Scroll Effects</h3>
+            <p>
+              8 different scroll effects are ready. You can always change by
+              your tastes.
+            </p>
           </div>
-      </div>
+        </div>
       </section>
 
       <!-- Membros / Fifth page-->
@@ -354,65 +368,91 @@
 
       <section class="breaknews">
         <div class="texto_inicial">
-            <a href="#">Get Our Aplication</a>
-            <h2>Lastest News</h2>
+          <a href="#">Get Our Aplication</a>
+          <h2>Lastest News</h2>
         </div>
         <div class="fotosbn">
-            <div class="fotobn1">
-                <img src="../img/fotobn_1.svg" alt="fotobn_1">
-                <h3 class="fotosbn_text"><br>It Does Not Matter Hows <br>
-                     Slowly go as Long</h3><br>
+          <div class="fotobn1">
+            <img src="../img/fotobn_1.svg" alt="fotobn_1" />
+            <h3 class="fotosbn_text">
+              <br />It Does Not Matter Hows <br />
+              Slowly go as Long
+            </h3>
+            <br />
 
-                <a href="#">Continue Reading <i class="flecha"></i></a>
-            </div>
-                <div class="fotobn2">
-                <img src="../img/fotobn_2.svg" alt="fotobn_2">
-                <h3 class="fotosbn_text"><br>Netbook Network Added <br>
-                    New Photo Filter</h3><br>
+            <a href="#">Continue Reading <i class="flecha"></i></a>
+          </div>
+          <div class="fotobn2">
+            <img src="../img/fotobn_2.svg" alt="fotobn_2" />
+            <h3 class="fotosbn_text">
+              <br />Netbook Network Added <br />
+              New Photo Filter
+            </h3>
+            <br />
 
-                <a href="#">Continue Reading <i class="flecha"></i></a>
-            </div>
-            <div class="fotobn3">
-                <img src="../img/fotobn_3.svg" alt="fotobn_3">
-                <h3 class="fotosbn_text"><br>We Optimised Netbooks <br>
-                    Better Navigation</h3><br>
-                    
-                <a href="#">Continue Reading <i class="flecha"></i></a>
-                </div>
+            <a href="#">Continue Reading <i class="flecha"></i></a>
+          </div>
+          <div class="fotobn3">
+            <img src="../img/fotobn_3.svg" alt="fotobn_3" />
+            <h3 class="fotosbn_text">
+              <br />We Optimised Netbooks <br />
+              Better Navigation
+            </h3>
+            <br />
+
+            <a href="#">Continue Reading <i class="flecha"></i></a>
+          </div>
         </div>
-    </section>
-    <footer class="footer">
+      </section>
+      <footer class="footer">
         <div class="top_footer">
-            <div class="footer_home">
-                <h2>Home</h2>
-                <p><br><br>Home <br><br>Community <br><br>Events <br><br>Contact<br></p>
+          <div class="footer_home">
+            <h2>Home</h2>
+            <p>
+              <br /><br />Home <br /><br />Community <br /><br />Events
+              <br /><br />Contact<br />
+            </p>
+          </div>
+          <div class="footer_resources">
+            <h2>Resources</h2>
+            <p>
+              <br /><br />Blog <br /><br />News <br /><br />Guides
+              <br /><br />Help Center<br />
+            </p>
+          </div>
+          <div class="footer_community">
+            <h2>Community</h2>
+            <p>
+              <br /><br />NewsFeed <br /><br />Profile <br /><br />Friends
+              <br /><br />Forums<br />
+            </p>
+          </div>
+          <div class="footer_main-links">
+            <h2>Main Links</h2>
+            <p>
+              <br /><br />Members <br /><br />Activity <br /><br />Groups
+              <br /><br />Private Group<br />
+            </p>
+          </div>
+          <div class="footer_cirkle-newsletter">
+            <h2>Subscribe Cirkle <br />Newsletter</h2>
+            <p>
+              <br /><br />Subscribe to be the first one to know <br />
+              about updates. Enter your email<br /><br />
+            </p>
+            <div class="submit">
+              <input type="email" placeholder="E-mail Address" /><button>
+                Subscribe
+              </button>
             </div>
-            <div class="footer_resources">
-                <h2>Resources</h2>
-                <p><br><br>Blog <br><br>News <br><br>Guides <br><br>Help Center<br></p>
-            </div>
-            <div class="footer_community">
-                <h2>Community</h2>
-                <p><br><br>NewsFeed <br><br>Profile <br><br>Friends <br><br>Forums<br></p>
-            </div>
-            <div class="footer_main-links">
-                <h2>Main Links</h2>
-                <p><br><br>Members <br><br>Activity <br><br>Groups <br><br>Private Group<br></p>
-            </div>
-            <div class="footer_cirkle-newsletter">
-                <h2>Subscribe Cirkle <br>Newsletter</h2>
-                <p><br><br>Subscribe to be the first one to know <br> about updates. Enter your email<br><br></p>
-                <div class="submit"><input type="email" placeholder="E-mail Address"><button>Subscribe</button></div>
-            </div>  
-            
+          </div>
         </div>
         <div class="base">
-            <p>Besnik Creative Agency.</p>
-            <img src="../img/logo_branca.svg" alt="logo_branca">
-            <img src="../img/medias.svg" alt="medias">
+          <p>Besnik Creative Agency.</p>
+          <img src="../img/logo_branca.svg" alt="logo_branca" />
+          <img src="../img/medias.svg" alt="medias" />
         </div>
-    </footer>
+      </footer>
     </main>
   </body>
 </html>
-
