Páginas sobre-nós e avaliações prontas

--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
           countries use socibooks we to stay <br />
           in touch with friends.
         </p>
-        <a class="inter-500-16px-2" href="">Join Our Community</a>
+        <a href="">
+          <div class="join-our-community">
+            <p class="inter-500-16px-2" href="">Join Our Community</p>
+            <div class="gg-arrow-right"></div>
+          </div>
+        </a>
       </article>
       <article class="card-2">
         <div class="rating-members">
@@ -104,7 +109,12 @@
           countries use socibooks we to stay <br />
           in touch with friends.
         </p>
-        <a class="inter-500-16px-2" href="">Go to Awards</a>
+        <a href="">
+          <div class="go-to-awards">
+            <p class="inter-500-16px-2" href="">Go to Awards</p>
+            <div class="gg-arrow-right"></div>
+          </div>
+        </a>
       </article>
       <article class="our-achievment">
         <h5 class="inter-h5-title">Our Achievment</h5>
@@ -120,6 +130,7 @@
         <a href="">
           <div class="discover-me-button">
             <p class="inter-500-14px" href="">Discover-me</p>
+            <div class="gg-arrow-right"></div>
           </div>
         </a>
       </article>
