git pages funcionando

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netbook</title>
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
       <section class="home">
         <header class="header">
           <div class="initial-header">
-            <img src="../img/logo-black.svg" class="logo" alt="Logo Netbook" />
+            <img src="img/logo-black.svg" class="logo" alt="Logo Netbook" />
             <nav class="nav">
               <ul>
                 <li><span> Home</span></li>
@@ -50,7 +50,7 @@
 
           <div class="right">
             <img
-              src="../img/img-pg1-dialogo.svg"
+              src="img/img-pg1-dialogo.svg"
               alt="Imagem Diálogo - Home/Primeira página"
             />
           </div>
@@ -90,13 +90,13 @@
           </ul>
         </article>
         <div class="about-us-big-images">
-          <img src="../img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
+          <img src="img/Image (1).png" alt="Pessoas reunidas em uma mesa" />
         </div>
         <div class="small-image1">
-          <img src="../img/Image (2).png" alt="Homem usando notebook" />
+          <img src="img/Image (2).png" alt="Homem usando notebook" />
           <div class="small-image2">
             <img
-              src="../img/Image (3).png"
+              src="img/Image (3).png"
               alt="Cabos de rede conectados a um hardware"
             />
           </div>
@@ -107,13 +107,13 @@
           <div class="rating-members">
             <img
               class="blue-star"
-              src="../img/Star.png"
+              src="img/Star.png"
               alt="Ícone de estrela azul"
             />
             <p class="inter-500-20px">4.8 Rating</p>
           </div>
           <div class="rating-members">
-            <img src="../img/people.png" alt="fotos de três pessoas" />
+            <img src="img/people.png" alt="fotos de três pessoas" />
             <p class="inter-500-16px">
               <span class="inter-600-16px">+838k</span> Members
             </p>
@@ -129,13 +129,13 @@
           <div class="rating-members">
             <img
               class="blue-star"
-              src="../img/Trophy.png"
+              src="img/Trophy.png"
               alt="Ícone de troféu azul"
             />
             <p class="inter-500-20px">Awwwards</p>
           </div>
           <div class="rating-members">
-            <img src="../img/Ellipse 14.png" alt="ícone do site Github" />
+            <img src="img/Ellipse 14.png" alt="ícone do site Github" />
             <p class="inter-500-16px">
               Best of <span class="inter-600-16px">2021</span> on Github
             </p>
@@ -180,7 +180,7 @@
 
         <div class="container">
           <div1>
-            <img src="../img/Icon(1).png" />
+            <img src="img/Icon(1).png" />
           </div1>
           <div>
             <h3>Members, Friends</h3>
@@ -189,7 +189,7 @@
             </p>
           </div>
           <div1>
-            <img src="../img/Icon(3).png" />
+            <img src="img/Icon(3).png" />
           </div1>
           <div>
             <h3>Groups</h3>
@@ -198,7 +198,7 @@
             </p>
           </div>
           <div1>
-            <img src="../img/Icon(1).png" />
+            <img src="img/Icon(1).png" />
           </div1>
           <div>
             <h3>Forum</h3>
@@ -207,7 +207,7 @@
             </p>
           </div>
           <div1>
-            <img src="../img/Icon(4).png" />
+            <img src="img/Icon(4).png" />
           </div1>
           <div>
             <h3>Custom Module</h3>
@@ -217,7 +217,7 @@
             </p>
           </div>
           <div1>
-            <img src="../img/Icon(2).png" />
+            <img src="img/Icon(2).png" />
           </div1>
           <div>
             <h3>List Builder</h3>
@@ -226,7 +226,7 @@
             </p>
           </div>
           <div1>
-            <img src="../img/Icon(5).png" />
+            <img src="img/Icon(5).png" />
           </div1>
           <div>
             <h3>List Scroll Effects</h3>
@@ -259,7 +259,7 @@
         <div class="imagesmembers">
           <div class="imgmembers">
             <img
-              src="../img/Page5/img-pg5-fahim.svg"
+              src="img/Page5/img-pg5-fahim.svg"
               alt="Imagem Fahim - Membros/Quinta página"
             />
             <h2>Fahim Rahman</h2>
@@ -267,7 +267,7 @@
           </div>
           <div class="imgmembers">
             <img
-              src="../img/Page5/img-pg5-kazi.svg"
+              src="img/Page5/img-pg5-kazi.svg"
               alt="Imagem Kazi - Membros/Quinta página"
             />
             <h2>Kazi Rahman</h2>
@@ -275,7 +275,7 @@
           </div>
           <div class="imgmembers">
             <img
-              src="../img/Page5/img-pg5-masterero.svg"
+              src="img/Page5/img-pg5-masterero.svg"
               alt="Imagem Masterero - Membros/Quinta página"
             />
             <h2>Masterero Ali</h2>
@@ -283,7 +283,7 @@
           </div>
           <div class="imgmembers">
             <img
-              src="../img/Page5/img-pg5-alia.svg"
+              src="img/Page5/img-pg5-alia.svg"
               alt="Imagem Alia - Membros/Quinta página"
             />
             <h2>Alia Karon</h2>
@@ -305,12 +305,12 @@
 
           <div class="imgpubli">
             <img
-              src="../img/Page6/img-pg6-applestore.svg"
+              src="img/Page6/img-pg6-applestore.svg"
               alt="Imagem Apple Store - Publicidade/Sexta página"
               class="applestorepubli"
             />
             <img
-              src="../img/Page6/img-pg6-playstore.svg"
+              src="img/Page6/img-pg6-playstore.svg"
               alt="Imagem Play Store - Publicidade/Sexta página"
               class="playstorepubli"
             />
@@ -319,7 +319,7 @@
 
         <div class="phonepubli">
           <img
-            src="../img/Page6/img-pg6-smartphone.svg"
+            src="img/Page6/img-pg6-smartphone.svg"
             alt="Imagem Smartphone - Publicidade/Sexta página"
           />
         </div>
@@ -334,7 +334,7 @@
         </div>
         <div class="fotosbn">
           <div class="fotobn1">
-            <img src="../img/fotobn_1.svg" alt="fotobn_1" />
+            <img src="img/fotobn_1.svg" alt="fotobn_1" />
             <h3 class="fotosbn_text">
               <br />It Does Not Matter Hows <br />
               Slowly go as Long
@@ -344,7 +344,7 @@
             <a href="#">Continue Reading <i class="flecha"></i></a>
           </div>
           <div class="fotobn2">
-            <img src="../img/fotobn_2.svg" alt="fotobn_2" />
+            <img src="img/fotobn_2.svg" alt="fotobn_2" />
             <h3 class="fotosbn_text">
               <br />Netbook Network Added <br />
               New Photo Filter
@@ -354,7 +354,7 @@
             <a href="#">Continue Reading <i class="flecha"></i></a>
           </div>
           <div class="fotobn3">
-            <img src="../img/fotobn_3.svg" alt="fotobn_3" />
+            <img src="img/fotobn_3.svg" alt="fotobn_3" />
             <h3 class="fotosbn_text">
               <br />We Optimised Netbooks <br />
               Better Navigation
@@ -410,8 +410,8 @@
         </div>
         <div class="base">
           <p>Besnik Creative Agency.</p>
-          <img src="../img/logo_branca.svg" alt="logo_branca" />
-          <img src="../img/medias.svg" alt="medias" />
+          <img src="img/logo_branca.svg" alt="logo_branca" />
+          <img src="img/medias.svg" alt="medias" />
         </div>
       </footer>
     </main>
